<resources>
    <string name="app_name">Delivery service</string>
    <string name="action_settings">Settings</string>
    <string name="client_FIO_label">Client name:</string>
    <string name="client_phone_label">Client phone:</string>
    <string name="address_label">Address:</string>
    <string name="totalSum_label">Sum:</string>
    <string name="payForm_label">Payform</string>
    <string name="time_label">Delivery time:</string>
    <string name="price_label">Price:</string>
    <string name="count_label">Count:</string>
    <string name="sum_label">Sum:</string>
    <string name="title_activity_settings">Settings</string>
    <string name="order_on_delivery">On delivery</string>
    <string name="order_to_return">Тo return</string>

    <!-- Preference Titles -->
    <string name="login_header">Login Token</string>
    <string name="sync_header">Sync</string>

    <!-- Token Preferences -->
    <string name="token_title">Your token</string>

    <!-- Sync Preferences -->
    <string name="url_title">Set URL API</string>
    <string name="action_save">Save</string>
    <string name="action_cancel_order">Cancel order</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="order_delivered">Delivered</string>
    <string name="dialog_call_ttile">Dial number ?</string>
    <string name="dialog_call_body">%s will call</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="client_comment">Comment:</string>
    <string name="product_ungroup" translatable="false">ungroup</string>
    <string name="split_count_title">Specify new count</string>
    <string name="dialog_call_select_title">Select phone to call</string>

</resources>
