<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lProductItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvSerial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:textColor="@color/design_default_color_surface"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="0123456789" />

        <TextView
            android:id="@+id/tvGoods"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSerial"
            tools:text="Name of the tovar" />

        <TextView
            android:id="@+id/tvPriceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvPrice"
            app:layout_constraintTop_toBottomOf="@+id/tvGoods"
            android:text="@string/price_label" />
        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/tvPriceLabel"
            app:layout_constraintEnd_toStartOf="@+id/tvCountLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvGoods"
            tools:text="50" />
        <TextView
            android:id="@+id/tvCountLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/tvPrice"
            app:layout_constraintEnd_toStartOf="@+id/tvCount"
            app:layout_constraintTop_toBottomOf="@+id/tvGoods"
            android:text="@string/count_label" />

        <TextView
            android:id="@+id/tvCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/tvCountLabel"
            app:layout_constraintEnd_toStartOf="@+id/tvSumLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvGoods"
            tools:text="1" />

        <TextView
            android:id="@+id/tvSumLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/tvCount"
            app:layout_constraintEnd_toStartOf="@+id/tvSum"
            app:layout_constraintTop_toBottomOf="@+id/tvGoods"
            android:text="@string/sum_label"  />

        <TextView
            android:id="@+id/tvSum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/tvSumLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvGoods"
            tools:text="100.0"/>

        <ImageView
            android:id="@+id/ungroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_ungroup"
            android:contentDescription="@string/product_ungroup" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>